chore: removal of unnecessary files on the front-end
