# apps/server/swagger-spec.json
@@ -9,23 +9,6 @@
         "tags": ["App"]
       }
     },
-    "/api/auth/otp": {
-      "post": {
-        "operationId": "AuthController_otpAuth",
-        "parameters": [],
-        "requestBody": {
-          "required": true,
-          "content": { "application/json": { "schema": { "$ref": "#/components/schemas/OtpAuthDto" } } }
-        },
-        "responses": {
-          "default": {
-            "description": "Whether the OTP was sent successfully",
-            "content": { "application/json": { "schema": { "type": "boolean" } } }
-          }
-        },
-        "tags": ["auth"]
-      }
-    },
     "/api/auth/otp/verify": {
       "post": {
         "operationId": "AuthController_verifyOtp",
@@ -38,6 +21,23 @@
           "default": {
             "description": "",
             "content": { "application/json": { "schema": { "$ref": "#/components/schemas/LoginResponseDto" } } }
+          }
+        },
+        "tags": ["auth"]
+      }
+    },
+    "/api/auth/otp": {
+      "post": {
+        "operationId": "AuthController_otpAuth",
+        "parameters": [],
+        "requestBody": {
+          "required": true,
+          "content": { "application/json": { "schema": { "$ref": "#/components/schemas/OtpAuthDto" } } }
+        },
+        "responses": {
+          "default": {
+            "description": "Whether the OTP was sent successfully",
+            "content": { "application/json": { "schema": { "type": "boolean" } } }
           }
         },
         "tags": ["auth"]
@@ -69,16 +69,6 @@
             "description": "",
             "content": { "application/json": { "schema": { "$ref": "#/components/schemas/LoginResponseDto" } } }
           }
-        },
-        "tags": ["auth"]
-      }
-    },
-    "/api/auth/validate-user": {
-      "post": {
-        "operationId": "AuthController_validateUser",
-        "parameters": [],
-        "responses": {
-          "default": { "description": "", "content": { "application/json": { "schema": { "type": "object" } } } }
         },
         "tags": ["auth"]
       }
@@ -228,7 +218,6 @@
   "components": {
     "securitySchemes": { "bearer": { "scheme": "bearer", "bearerFormat": "JWT", "type": "http" } },
     "schemas": {
-      "OtpAuthDto": { "type": "object", "properties": { "email": { "type": "string" } }, "required": ["email"] },
       "VerifyOtpDto": {
         "type": "object",
         "properties": {
@@ -256,6 +245,7 @@
         "properties": { "token": { "type": "string" }, "user": { "$ref": "#/components/schemas/UserDto" } },
         "required": ["token", "user"]
       },
+      "OtpAuthDto": { "type": "object", "properties": { "email": { "type": "string" } }, "required": ["email"] },
       "PractitionerSignUpDto": {
         "type": "object",
         "properties": {
